--- a/app/globals.css
+++ b/app/globals.css
@@ -1,30 +1,39 @@
 /* @import "tailwindcss"; */
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 body {
-  display: flex;
-  margin: 0;
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  min-height: 100vh;
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    display: flex;
+    margin: 0;
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
+    min-height: 100vh;
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 }
 
 * {
-  outline: none;
-  box-sizing: border-box;
+    outline: none;
+    box-sizing: border-box;
 }
 
 main {
-  margin: 0 auto;
-  max-width: 98%;
-  width: 900px;
+    margin: 0 auto;
+    max-width: 98%;
+    width: 900px;
 }
 
 #demo-container-card {
     background-color: #ffffff55;
+}
+
+a {
+    color: #1f7ac5;
+}
+
+a:focus,
+a:hover {
+    color: #bb2828;
 }
