Fixed Card and Dialog demos

--- a/app/dialogs/dialogs.css
+++ b/app/dialogs/dialogs.css
@@ -1,14 +1,14 @@
-.card-container {
+#demo-container-card .card-container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.card-container .card {
+#demo-container-card .card {
     flex: 1 1 200px;
     min-width: 200px;
 }
 
-.button-container {
+#demo-container-card .button-container {
     display: flex;
     justify-content: center;
 }
