--- a/app/form-inputs/inputs.css
+++ b/app/form-inputs/inputs.css
@@ -1,3 +1,8 @@
 .group-controls-container {
     margin: 10px 5px;
 }
+
+.stepper > div[role="tablist"] {
+    border-radius: 10px 10px 0 0;
+    overflow: auto;
+}
